# internship-ai-assisstant

./: 404.html  index.html
assets/: HomePage--BINOzDe.js  HomePage-3Hvrr0Pr.js  HomePage-BKn2VPQ7.js  HomePage-BkRmri-S.js  HomePage-CzPT45_H.js  HomePage-DnvYjQFl.js  HomePage-TIyAZ9kX.js  HomePage-iPu6OmUd.js  LoginPage-D3sMP-bE.js  LoginPage-DC3w1KRV.js  LoginPage-DjmSYfGP.js  LoginPage-G-DeNx4C.js  LoginPage-cuypqf2Z.js  LoginPage-fCdVOLo8.js  LoginPage-fhz-OOwT.js  LoginPage-sem1vGeh.js  ProfilePage-BEpIQxTN.js  ProfilePage-BJm9iaIx.js  ProfilePage-C342pMuY.js  ProfilePage-CeBMuRtq.js  ProfilePage-DVnbrEWd.js  ProfilePage-DfHnjP9o.js  ProfilePage-DonJHhtH.js  ProfilePage-Dqbcnf1S.js  RegisterPage-B01mZ_wl.js  RegisterPage-B3cfoTiv.js  RegisterPage-BO_J5kC7.js  RegisterPage-C2OvofzA.js  RegisterPage-CIYdiW9r.js  RegisterPage-CS0ugcvh.js  RegisterPage-CpKtyCdx.js  (+15 more)
server/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
server/data/: README.md
server/data/data_processing_notebooks/: data_handling_notebook.ipynb  embedding_storage.ipynb
server/data/processed_data/: rag_ready_docs_20251111.jsonl
server/data/raw_data/: MScAC_InternshipProposalForm.docx  MScAC_calendar.ics
server/src/: server.py
server/src/db/: setup.py
server/src/handlers/: text_handler.py
server/src/llm/: llm_stream.py
server/src/middleware/: async_pool_middleware.py  auth_middleware.py  llm_middleware.py  s3_middleware.py
server/src/repositories/: user_repository.py
server/src/resources/: chat.py  resume.py  test.py  user.py
(+13 files in other folders)
