[project]
name = "internship-ai-assisstant"
version = "0.1.0"
description = ""
authors = [
    {name = "Calvin Tran",email = "calvintran@cs.toronto.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "falcon (>=4.1.0,<5.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
